# simplex

./: .gitignore  AGENTS.md  GEMINI.md  README.md  chat_history_plan.md  chats.db  cli_prompts.toml  main.py  postponed.md  pyproject.toml  search_tracking.json  specs.md  todos.md  user_settings.json
plans/: 2026-05-06_remediation.md  2026-05-07_python_scripts_env.md  2026-05-07_reasoning_content_separation.md  2026-05-13_round_counter_and_max_rounds.md  2026-05-17_template_generation_skill.md  system_env_detection.md
src/: config.py  db.py  prompts.py  storage.py
task_archive/: 2026-05-13_1114_agent_block_root_cause_fix.md  2026-05-13_1137_delegation_and_description_fix.md  2026-05-13_1150_hard_stop_fitz_reanalysis.md  2026-05-13_1155_pure_text_delegation.md  2026-05-13_1433_bifurcated_workflow.md  2026-05-13_1505_pure_text_to_doc.md  2026-05-13_1510_restore_prompt_info.md  2026-05-13_1737_create_doc_agent_bugfix.md  2026-05-13_1856_document_python_files.md  2026-05-13_analyze_doc_agent.md  2026-05-13_create_doc_dedicated_tools.md  2026-05-13_create_pdf_agent.md  2026-05-13_optimize_read_document_pypdf.md  2026-05-13_round_counter_and_max_rounds.md
tests/: test_agent_loading.py  test_agent_registry.py  test_bash_tool.py  test_builtin_tools.py  test_config.py  test_db.py  test_doc_reader.py  test_engine.py  test_file_management.py  test_file_search.py  test_sanitization.py  test_storage.py  test_tool_registry.py
todos_archive/: 2026-05-06_1200_phase_1_complete.md  2026-05-06_1330_phase_2_tools_and_ui_refinement.md  2026-05-06_1700_search_and_subagents_complete.md  (+2 more)
(+49 files in other folders)
