[project]
name = "simplex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.83.14",
    "nicegui>=3.11.1",
    "pydantic-settings>=2.14.0",
    "pyside6>=6.11.0",
    "python-dotenv>=1.2.2",
    "pywebview>=6.2.1",
    "qtpy>=2.4.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
